html/static/css/style.css
/* ... */
.loader-hidden {
  opacity: 0;
  visibility: hidden;
}

.loader::after {
  content: "";
  width: 75px;
  height: 75px;
  border: 30px solid var(--color-lightgray);
  border-top-color: var(--color-dimgray);
  border-radius: 50%;
  animation: loading .75s ease infinite;
  transition: opacity 1s ease-in-out;
}

@keyframes loading {
  from {
    transform: rotate(0turn);
  }
  to {
    transform: rotate(1turn);
  }
}

/* SECTIONS */

.window {
  position: relative;
  background-color: var(--color-window-bg);
  border: 3px solid var(--color-dimgray);
  border-radius: var(--br);
  font-family: var(--font);
  color: var(--color-white);
  overflow: hidden;
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  flex-direction: column;
  padding: 11px 32px 32px 32px;
  box-sizing: border-box;
  margin: 32px;
}

.topbar {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: top;
  justify-content: space-between;
}

.content {
  width: 100%;
  padding-top: 21px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;
  box-sizing: border-box;
}

.h-content {
  margin-top: 10px;
  width: 100%;
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 21px;
  align-items: center;
  box-sizing: border-box;
}

.people-list {
  height: 247px;
  width: 100%;
  max-width: 573px;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  padding: 32px 8px 32px 32px;
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
}

.friend-item {
  height: 63px;
  max-width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: left;
  box-sizing: border-box;
}

.friend-item:not(:last-child) {
  border-bottom: 0.5px solid var(--color-lightgray);
}

.match-list {
  height: 500px;
  width: 100%;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  padding: 32px 8px 32px 32px;
  box-sizing: border-box;
}

body {
  scrollbar-width: thin;
  scrollbar-color: var(--color-lightgray) var(--color-clear);
}

.scroll-people,
.scroll-matches,
.scroll-tournament-result {
  width: 100%;
  max-height: 100%;
  padding-right: 16px;
  box-sizing: border-box;
  overflow: auto;
  scrollbar-width: thin;
  scrollbar-color: var(--color-lightgray) var(--color-clear);
  font-family: var(--font);
  font-size: 32px;
  font-weight: var(--font-light);
  text-align: left;
}

/* For Chrome */

::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  background: var(--color-clear);
}

::-webkit-scrollbar-thumb {
  background-color: var(--color-lightgray);
  border-radius: var(--br);
}

::-webkit-scrollbar-thumb:active {
  background-color: var(--color-highlightgray);
}

.scroll-people {
  height: 420px;
  overflow-x: hidden;
}

.scroll-matches {
  height: 500px;
}

.scroll-tournament-result {
  height: 190px;
}

.tournament-result-games {
  height: 240px;
  width: 100%;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  padding: 32px 8px 32px 32px;
  margin-top: 42px;
  box-sizing: border-box;
}

.tournament-result-rank {
  height: 240px;
  width: 100%;
  max-width: 320px;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  padding: 32px 8px 32px 32px;
  box-sizing: border-box;
}

.list-item {
  height: 63px;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  box-sizing: border-box;
}

.list-item-left {
  height: 63px;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: left;
}

.scroll-matches .list-item {
  min-width: 795px;
}

.list-item-left:not(:last-child),
.list-item:not(:last-child) {
  border-bottom: 0.5px solid var(--color-lightgray);
}

.score {
  width: 72.5px;
  display: flex;
  flex-direction: row;
}

.match-result {
  min-width: 465px;
  max-width: 465px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.account-details {
  max-width: 420px;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  padding: 32px;
}

.account-dropdown {
  position: absolute;
  top: 21px;
  left: 21px;
  background-color: var(--color-clear);
  border: 3px solid var(--color-clear);
  border-radius: var(--br-account);
  display: flex;
  flex-direction: column;
  padding: 11px;
}

/* only if dropdown content is shown */
#account-dropdown-id.show {
  background-color: var(--color-window-bg);
  border: 3px solid var(--color-dimgray);
  transition: opacity .25s ease-in-out, padding .25s ease-in-out;
}

.dropdown-content {
  display: flex;
  flex-direction: column;
  visibility: hidden;
  opacity: 0;
  max-height: 0;
  overflow: hidden;
  transition: opacity .25s ease-in-out, max-height .25s ease-in-out;
}

#dropdown-content-id.show {
  opacity: 1;
  visibility: visible;
  max-height: fit-content;
  transition: opacity .25s ease-in-out, max-height .25s ease-in-out;
}

/*
.dropdown-content {
  display: flex;
  flex-direction: column;
  visibility: hidden;
  opacity: 0;
  transition: opacity .5s ease-in-out;
}

#dropdown-content-id.show {
  opacity: 1;
  visibility: visible;
}*/

.announce-player {
  width: 210px;
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  font-family: var(--font);
  color: var(--color-white);
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  flex-direction: column;
  padding: 21px;
}

.controls {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.announce-vs {
  display: flex;
  flex-direction: column;
  margin: 21px;
  justify-content: center;
}
/* ... */

